fix. added actions sequence

--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -62,6 +62,7 @@ jobs:
 
   build:
     name: Autograding
+    needs: [tests]
     runs-on: ubuntu-latest
     env:
       POSTGRES_USER: "postgres"
